Fix the carousel to display better on mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /* Make the image fully responsive */
 .carousel-inner img {
     width: 100%;
-    height: 600px;
+    height: 300px;
+    object-fit: cover;
 }
 
 .carousel {
@@ -54,7 +55,7 @@ p {
 }
 
 .text-box > h2 {
-    font-size: small;
+    font-size: medium;
 }
 /*---------- Header section end ----------*/
 
@@ -234,6 +235,11 @@ h3 {
         right: 0;
         height: 290px;
         width: 250px;
+    }
+
+    .carousel-inner img {
+        width: 100%;
+        height: 500px;
     }
 }
 
